Updated all tests to share a DB context