@@ -287,6 +287,7 @@
                     <jvmArgs>
                         <jvmArg>-Xms64m</jvmArg>
                         <jvmArg>-Xmx1024m</jvmArg>
+                        <jvmArg>-XX:MaxPermSize=512m</jvmArg>
                     </jvmArgs>
                 </configuration>
             </plugin>
